test/spec/func-result-after-body.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func-result-after-body.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/func-result-after-body.fail.wast:1:22: syntax error, unexpected RESULT
(module (func (nop) (result i32)))
                     ^^^^^^

;;; STDERR ;;)
